# otel-rust-axum

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
example/: .env.example  Cargo.toml  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml
example/src/: actix_example.rs  graphql_example.rs
otel-rust-axum/: Cargo.toml
otel-rust-axum/src/: client.rs  db.rs  layer.rs  lib.rs  sdk.rs
rust-otel-auto/: Cargo.toml
rust-otel-auto/src/: client.rs  config.rs  context.rs  db.rs  error.rs  graphql.rs  layer.rs  lib.rs  propagator.rs  reqwest_ext.rs  sdk.rs  span.rs
rust-otel-auto/src/middleware/: actix.rs  axum.rs  mod.rs
rust-otel-macros/: Cargo.toml
rust-otel-macros/src/: lib.rs
