[workspace]
resolver = "2"
members = [
    "rust-otel-auto",
    "rust-otel-macros",
    "example",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/last9/rust-opentelemetry"
authors = ["Last9 <support@last9.io>"]

[workspace.dependencies]
# OpenTelemetry core - versions compatible with Rust 1.74
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.13"
opentelemetry-http = "0.10"

# Async runtime - pinned for 1.74 compatibility
tokio = { version = "1.35", features = ["full"] }
futures = "0.3.29"
async-trait = "0.1.74"

# HTTP frameworks - pinned for 1.74 compatibility
actix-web = "4.4"
actix-http = "3.4"
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }

# GraphQL - pinned for 1.74 compatibility
async-graphql = "6.0"
async-graphql-actix-web = "6.0"
juniper = "0.15"

# HTTP client instrumentation
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing ecosystem integration - pinned for 1.74 compatibility
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.22"

# Utilities - pinned to avoid 2024 edition
once_cell = "1.18"
parking_lot = "0.12"
thiserror = "1.0.50"
uuid = { version = "1.6.1", features = ["v4"] }
tempfile = "3.10"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std"] }
http = "0.2"
http-body-util = "0.1"
bytes = "1.5"
pin-project-lite = "0.2"
dotenvy = "0.15"
getrandom = "0.2"
rand = "0.8"
rand_core = "0.6"

# Proc macro dependencies
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

# Testing
tokio-test = "0.4"
