[workspace]
resolver = "2"
members = [
    "otel-rust-axum",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/last9/otel-rust-axum"
authors = ["Last9 <support@last9.io>"]

[workspace.dependencies]
# OpenTelemetry 0.27 — highest version with MSRV 1.70 (compatible with Rust 1.74).
# opentelemetry 0.28+ bumped MSRV to 1.75.
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
# default-features = false drops grpc-tonic which pulls in tonic/hyper 1.x.
# reqwest-client: auto-creates the HTTP client.
# reqwest-rustls-webpki-roots: adds TLS — both are required together.
opentelemetry-otlp = { version = "0.27", default-features = false, features = [
    "http-proto",
    "reqwest-client",
    "reqwest-rustls-webpki-roots",
] }
opentelemetry-semantic-conventions = "0.27"

# Axum 0.6 — axum 0.7+ requires Rust 1.75
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tokio = { version = "1", features = ["full"] }

# reqwest 0.12 — rustls-tls-webpki-roots avoids security-framework 3.x (Rust 1.83)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-webpki-roots",
] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.28"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Required pins on Rust < 1.83.
# idna 1.0+ and url 2.5.1+ pull in icu4x which requires Rust 1.83.
# CVE-2024-12224 (moderate): idna < 1.0 accepts certain invalid Punycode labels.
# This crate only uses url/idna to parse the OTLP endpoint — not for any security
# or auth decision — so the CVE has no exploitable impact here.
# Fix: upgrade to Rust 1.83+ and drop these pins.
url = "=2.5.0"
idna = "=0.5.0"
