[package]
name = "rust-otel-auto"
description = "Auto-instrumentation for Rust applications with OpenTelemetry support for Rust 1.74+"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["opentelemetry", "tracing", "observability", "auto-instrumentation", "graphql"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[features]
default = ["actix-web", "graphql", "reqwest"]
actix-web = ["dep:actix-web", "dep:actix-http"]
axum = ["dep:axum", "dep:tower", "dep:tower-http"]
graphql = ["dep:async-graphql"]
reqwest = ["dep:reqwest"]
full = ["actix-web", "axum", "graphql", "reqwest"]

[dependencies]
# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-http = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP frameworks (optional)
actix-web = { workspace = true, optional = true }
actix-http = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
hyper = { workspace = true }

# GraphQL (optional)
async-graphql = { workspace = true, optional = true }

# HTTP client (optional)
reqwest = { workspace = true, optional = true }

# Tracing integration
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
once_cell = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }

# Macros from this workspace
rust-otel-macros = { path = "../rust-otel-macros" }

[dev-dependencies]
tokio-test = { workspace = true }
